--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,37 @@
+@import '@fontsource/noto-sans-jp';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        padding: 0;
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Noto Sans JP',
+            theme('fontFamily.serif');
+        color: #ffffff;
+        background: theme('colors.slate.800');
+    }
+}
+
+@layer components {
+    .solely-btn {
+        @apply bg-white text-slate-800 rounded-full px-4 py-2 transition ease-in-out duration-200;
+    }
+    .solely-btn::hover {
+        @apply bg-gray-300;
+    }
+
+    .solely-gradient {
+        @apply text-white bg-gradient-to-r from-sky-500 via-purple-500 to-pink-500;
+    }
+
+    .solely-text-title {
+        @apply text-2xl;
+    }
+
+    .solely-text-paragraph {
+        @apply text-sm;
+    }
+}
