--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,7 +10,8 @@
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Noto Sans JP',
             theme('fontFamily.serif');
-        background: theme('colors.slate.800');
+        /*        color: #fff;*/
+        background: theme('colors.slate.100');
     }
 }
 
